# Credit-Scoring

./: .gitignore  404.html  Makefile  README.md  index.html  objects.inv  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: CI CD.yml  build.yml  ci.yml  documentation.yml  python-package.yml
creditscoring/: .env  _version  _version 2  settings.py
creditscoring/modelling/: inference.py  metrics.py  pipeline.py  preprocessing.py  utils.py
docs/: mkdocs.yml
docs/docs/: index.md  module.md
models/: 23h33m43s_24-08-2022.joblib
module/: index.html
requirements/: dev  prod  requirements.txt
tests/: test_metrics.py
